Actualizando pagina.html

--- a/pagina.html
+++ b/pagina.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio - Tienda Comercial</title>
+    <title>Inicio - WEB VIDEOS Y MUSICA </title>
 </head>
 <body>
     <h1>Inicio</h1>
