Actualizar fotografia inicio.html

--- a/PP/inicio.html
+++ b/PP/inicio.html
@@ -27,7 +27,7 @@
         <h3>Datos Personales</h3>
         <p>Nombre:Denis Carlos Jurado Pariona</p>
         <p>Edad: 19 años</p>
-        <h3>Imagen</h3>
+        <h3>Fotografia</h3>
         <img src="https://e1.pxfuel.com/desktop-wallpaper/342/938/desktop-wallpaper-persona-5-kurusu-akira-anime-boy-cat-glasses-profile-anime-cute-boy.jpg"width="45%" alt="Mi Foto">
     </div>
 </section>
